[package]
name = "typst-syntax"
description = "Parser and syntax tree for Typst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typst-timing = { workspace = true }
typst-utils = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
unicode-ident = { workspace = true }
unicode-math-class = { workspace = true }
unicode-script = { workspace = true }
unicode-segmentation = { workspace = true }
unscanny = { workspace = true }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
strum = { version = "0.27", features = ["derive"] }
serde_repr = "0.1.20"
console_error_panic_hook = "0.1.7"

[lints]
workspace = true
